# AI-Demo

./: .gitignore  AGENTS.md  README.md  conftest.py  demo.md  pyproject.toml
agents/: api_test_agent.md  bug_analysis_agent.md  performance_stability_agent.md  qa_architect_agent.md  regression_agent.md  requirement_analysis_agent.md  senior_qa_agent.md  test_design_agent.md  ui_test_agent.md
docs/: architecture-overview.md  repository-roadmap.md  roadmap.md  task-routing-matrix.md
references/: environment-notes.md  glossary.md  quality-gates.md  quality_baseline.md  system_context.md
scripts/: repository_audit.py  smoke_check.py
skills/api-testing/: SKILL.md
skills/automation-scripting/: SKILL.md
skills/bug-triage/: SKILL.md
skills/log-analysis/: SKILL.md
skills/mock-server-design/: SKILL.md
skills/requirement-review/: SKILL.md
skills/test-case-design/: SKILL.md
skills/test-data-building/: SKILL.md
skills/web-crawling/: SKILL.md
src/enterprise_ai_test_agents/: context.py
standards/: bug_standard.md  output_standard.md  review_standard.md  risk_standard.md  test_case_standard.md
templates/: api_mock_spec_template.md  bug_report_template.md  review_checklist_template.md  risk_assessment_template.md  test_case_template.md  test_plan_template.md  test_report_template.md
tests/: test_context.py  test_repository_structure.py
